done second app

--- a/src/authors.html
+++ b/src/authors.html
@@ -13,7 +13,7 @@
       class="container text-decoration"
       style="text-align: center; margin-top: 1rem"
     >
-      <h2>Ýerine ýetiren: Hojaberdiýew Mekan</h2>
+      <h2>Ýerine ýetiren: Nuryýewa Ogulmeňli</h2>
       <h2>Kabul eden: Gurbandurdyýewa Altyn</h2>
     </div>
   </body>
